--- a/authentication/templates/authentication/testing.html
+++ b/authentication/templates/authentication/testing.html
@@ -45,13 +45,14 @@
 
         // headers.append("Content-Type", `multipart/form-data; boundary=${boundary}`);
         // headers.append("Authorization", `Token ${'d7486ee94392fab46bcc41df5650e4feedf3dac6'}`);
-        
-        fetch("http://bildingapi.onrender.com/api/projects", {
+        // '4b8a7871b0ffb06334fab9d8e63044f4574b18b7'
+        fetch("https://bildingapi.onrender.com/api/projects", {
             method: "POST",
             body: formData,
             headers:{
               "Content-Type" : `multipart/form-data; boundary=${boundary}`,
-              "Authorization": `Token ${'d7486ee94392fab46bcc41df5650e4feedf3dac6'}`
+              "Authorization": `Token ${'4b8a7871b0ffb06334fab9d8e63044f4574b18b7'}`
+              // "Authorization": `Token ${'d7486ee94392fab46bcc41df5650e4feedf3dac6'}`
             }
         }).then((response) => response.json())
           .then((data) => {
@@ -83,7 +84,7 @@
         formData.append('email',email);
         formData.append('password',password);
 
-      fetch("http://127.0.0.1:8000/auth/login", {
+      fetch("https://bilding.onrender.com/auth/login", {
             method: "POST",
             body: formData
         }).then((response) => response.json())
