--- a/authentication/templates/authentication/testing.html
+++ b/authentication/templates/authentication/testing.html
@@ -8,7 +8,7 @@
     <input type="text" id="location" placeholder="Enter location">
     <input type="number" id="budget" placeholder="Enter budget ">
     <input type="text" id="description" placeholder="Enter description">
-    <input type="file" id="image" placeholder="Images">
+    <input type="file" id="image" placeholder="Images" multiple>
     <input type="submit" value="Submit">
 </form>
 
@@ -25,7 +25,7 @@
         const location = document.getElementById('location').value;
         const budget = document.getElementById('budget').value;
         const description = document.getElementById('description').value;
-        const image = document.getElementById('image').files[0];
+        const imageFiles = document.getElementById('image').files;
 
         const formData = new FormData();
         formData.append('title',title);
@@ -38,6 +38,9 @@
         formData.append('budget',budget);
         formData.append('description',description);
         formData.append('image',image);
+        for (let i = 0; i < imageFiles.length; i++) {
+          formData.append("images", imageFiles[i]);
+        }
 
 
         // const headers = new Headers();
@@ -46,13 +49,13 @@
         // headers.append("Content-Type", `multipart/form-data; boundary=${boundary}`);
         // headers.append("Authorization", `Token ${'d7486ee94392fab46bcc41df5650e4feedf3dac6'}`);
         // '4b8a7871b0ffb06334fab9d8e63044f4574b18b7'
-        fetch("https://bildingapi.onrender.com/api/projects", {
+        fetch("http://127.0.0.1:8000/api/projects", {
             method: "POST",
             body: formData,
             headers:{
-              "Content-Type" : `multipart/form-data; boundary=${boundary}`,
-              "Authorization": `Token ${'4b8a7871b0ffb06334fab9d8e63044f4574b18b7'}`
-              // "Authorization": `Token ${'d7486ee94392fab46bcc41df5650e4feedf3dac6'}`
+              // "Content-Type" : `multipart/form-data; boundary=${boundary}`,
+              // "Authorization": `Token ${'4b8a7871b0ffb06334fab9d8e63044f4574b18b7'}`
+              "Authorization": `Token ${'d7486ee94392fab46bcc41df5650e4feedf3dac6'}`
             }
         }).then((response) => response.json())
           .then((data) => {
