--- a/authentication/templates/authentication/testing.html
+++ b/authentication/templates/authentication/testing.html
@@ -8,9 +8,9 @@
     <input type="text" id="location" placeholder="Enter location">
     <input type="number" id="budget" placeholder="Enter budget ">
     <input type="text" id="description" placeholder="Enter description">
-    <input type="file" id="image" placeholder="Images"enctype="multipart/form-data">
-    <input type="file" id="image" placeholder="Images"enctype="multipart/form-data">
-    <input type="file" id="image" placeholder="Images"enctype="multipart/form-data">
+    <input type="file" id="image" placeholder="Images">
+    <input type="file" id="image" placeholder="Images">
+    <input type="file" id="image" placeholder="Images">
     <input type="submit" value="Submit">
 </form>
 
